ver 0.17 (2011/??/??)
* protocol:
  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
* input:
  - cdio_paranoia: new input plugin to play audio CDs
  - curl: enable CURLOPT_NETRC
* decoder:
  - mpg123: implement seeking
  - ffmpeg: drop support for pre-0.5 ffmpeg
* output:
  - osx: allow user to specify other audio devices
  - raop: new output plugin
  - shout: add possibility to set url
  - roar: new output plugin for RoarAudio
* state_file: add option "restore_paused"


ver 0.16.3 (2011/??/??)
* fix assertion failure in audio format mask parser


ver 0.16.2 (2011/03/18)
* configure.ac:
  - fix bashism in tremor test
* decoder:
  - tremor: fix configure test
  - gme: detect end of song
* encoder:
  - vorbis: reset the Ogg stream after flush
* output:
  - httpd: fix uninitialized variable
  - httpd: include sys/socket.h
  - oss: AFMT_S24_PACKED is little-endian
  - oss: disable 24 bit playback on FreeBSD


ver 0.16.1 (2011/01/09)
* audio_check: fix parameter in prototype
* add void casts to suppress "result unused" warnings (clang)
* input:
  - ffado: disable by default
* decoder:
  - mad: work around build failure on Solaris
  - resolve modplug vs. libsndfile cflags/headers conflict
* output:
  - solaris: add missing parameter to open_cloexec() cal
  - osx: fix up audio format first, then apply it to device
* player_thread: discard empty chunks while cross-fading
* player_thread: fix assertion failure due to early seek
* output_thread: fix double lock


ver 0.16 (2010/12/11)
* protocol:
  - send song modification time to client
  - added "update" idle event
  - removed the deprecated "volume" command
  - added the "findadd" command
  - range support for "delete"
  - "previous" really plays the previous song
  - "addid" with negative position is deprecated
  - "load" supports remote playlists (extm3u, pls, asx, xspf, lastfm://)
  - allow changing replay gain mode on-the-fly
  - omitting the range end is possible