@@ -5,6 +5,7 @@ ver 0.17 (2011/??/??)
 * input:
   - cdio_paranoia: new input plugin to play audio CDs
   - curl: enable CURLOPT_NETRC
+  - ffmpeg: support libavformat 0.7
 * decoder:
   - mpg123: implement seeking
   - ffmpeg: drop support for pre-0.5 ffmpeg
